--- a/ace/Jenkinsfile
+++ b/ace/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
       stage('Build') {
           steps {
               cleanWs()
-              checkout scm
+              checkout scm: [$class: 'GitSCM', branches: scm.branches, extensions: scm.extensions + [[$class: 'RelativeTargetDirectory', relativeTargetDir: 'application']], userRemoteConfigs: scm.userRemoteConfigs] 
               sh '/full/path/to/build.sh "<shared_lib_directory>"'
           }
       }
