--- a/ace/Jenkinsfile.example
+++ b/ace/Jenkinsfile.example
@@ -7,7 +7,7 @@ pipeline {
       stage('Build') {
           steps {
               cleanWs()
-              checkout scm
+              checkout scm: [$class: 'GitSCM', branches: scm.branches, extensions: scm.extensions + [[$class: 'RelativeTargetDirectory', relativeTargetDir: 'application']], userRemoteConfigs: scm.userRemoteConfigs] 
               sh '/home/iresh/iresh-s-buildscripts/ace/build.sh "https://raw.githubusercontent.com/IreshMMOut/ACESharedLibDirectory/master/libraries.csv"'
           }
       }
